@@ -16,7 +16,8 @@ libgpsim_lcd_la_LDFLAGS =  @X_LDFLAGS@
 
 
 
-EXTRA_DIST = lcd.gif caps.pl lcd.xpm lcdfont.h lcdfont.inc README lcd.h autogen.sh
+EXTRA_DIST = lcd.gif caps.pl lcd.xpm lcdfont.h lcdfont.inc README lcd.h  \
+	autogen.sh 
 
 
 SUBDIRS = examples
